RESOLVED FIXED247185
GraphicsContextFlushIdentifier is defined in wrong layer
https://bugs.webkit.org/show_bug.cgi?id=247185
Summary GraphicsContextFlushIdentifier is defined in wrong layer
Kimmo Kinnunen
Reported 2022-10-28 05:11:28 PDT
GraphicsContextFlushIdentifier is defined in wrong layer WebCore::ImageBuffer::didFlush(GraphicsContextFlushIdentifier) is not used in WebCore. It is feature of one particular implementation, WebKit::RemoteDisplayListRecorder.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-28 05:12:40 PDT
Kimmo Kinnunen
Comment 2 2022-10-28 05:16:55 PDT
EWS
Comment 3 2022-10-29 00:40:17 PDT
Committed 256127@main (411c08513581): <https://commits.webkit.org/256127@main> Reviewed commits have been landed. Closing PR #5901 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.