Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp
@@ -57,7 +57,7 @@ RemoteImageBufferProxy::~RemoteImageBufferProxy()
     m_remoteRenderingBackendProxy->remoteResourceCacheProxy().releaseImageBuffer(*this);
 }
 
-void RemoteImageBufferProxy::waitForDidFlushOnSecondaryThread(GraphicsContextFlushIdentifier targetFlushIdentifier)
+void RemoteImageBufferProxy::waitForDidFlushOnSecondaryThread(DisplayListRecorderFlushIdentifier targetFlushIdentifier)
 {
     ASSERT(!isMainRunLoop());
     Locker locker { m_receivedFlushIdentifierLock };
@@ -79,7 +79,7 @@ bool RemoteImageBufferProxy::hasPendingFlush() const
     return m_sentFlushIdentifier != m_receivedFlushIdentifier;
 }
 
-void RemoteImageBufferProxy::didFlush(GraphicsContextFlushIdentifier flushIdentifier)
+void RemoteImageBufferProxy::didFlush(DisplayListRecorderFlushIdentifier flushIdentifier)
 {
     ASSERT(isMainRunLoop());
     Locker locker { m_receivedFlushIdentifierLock };
@@ -286,7 +286,7 @@ bool RemoteImageBufferProxy::flushDrawingContextAsync()
     if (!m_needsFlush)
         return hasPendingFlush();
 
-    m_sentFlushIdentifier = GraphicsContextFlushIdentifier::generate();
+    m_sentFlushIdentifier = DisplayListRecorderFlushIdentifier::generate();
     LOG_WITH_STREAM(SharedDisplayLists, stream << "RemoteImageBufferProxy " << m_renderingResourceIdentifier << " flushDrawingContextAsync - flush " << m_sentFlushIdentifier);
     m_remoteDisplayList.flushContext(m_sentFlushIdentifier);
     m_needsFlush = false;
